Fix visibility of scroll element

--- a/src/components/IntroSection.module.css
+++ b/src/components/IntroSection.module.css
@@ -88,7 +88,7 @@
   padding: 8px;
   background-color: rgb(35, 35, 35);
   position: absolute;
-  bottom: 24px;
+  bottom: 48px;
   box-shadow: 0px 0px 8px 8px grey;
   animation-name: glow;
   animation-duration: 2s;
